# trainer-dash

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  init-db.sh  nginx.conf  setupkc.sh
.github/workflows/: ci.yml
apps/api/: .env  .gitignore  Cargo.toml  Dockerfile
apps/api/.sqlx/: query-02241b964ba47144d1a7e02b8cdaaa3ccaf636b0d53bcb9432adbffdcda24509.json  query-634e24b7773e158a45de892e8e0ca44e40b3f593d8aa29c22ba1e2e507285ef4.json
apps/api/migrations/: 0002_add_sessions_and_programs.sql  001_init_schema.sql
apps/api/src/: main.rs
apps/api/src/auth/: claims.rs  guards.rs  jwks.rs  middleware.rs  mod.rs
apps/api/src/handlers/: trainer.rs
apps/api/src/models/: mod.rs
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/src/: App.css  App.tsx  api.ts  auth.ts  main.tsx
apps/web/src/components/: AddClientForm.tsx  ClientForm.tsx  SessionHistory.tsx
apps/web/src/layouts/: MainLayout.tsx
apps/web/src/pages/: Athletes.tsx  ClientProfile.tsx  Dashboard.tsx
certs/: fullchain.pem  privkey.pem
infra/: apps.tf  cloudsql.tf  dns.tf  gke.tf  iam.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf  vpc.tf
k8s/: api-deployment.yaml  api-service.yaml
k8s/argocd/: argocd-app.yaml
k8s/base/: deployment.yaml  service.yaml
k8s/overlays/production/: kustomization.yaml
