[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [ 
    "runtime-tokio", 
    "tls-rustls", 
    "postgres", 
    "chrono", 
    "uuid", 
    "rust_decimal", 
    "json",
    "macros"
] }
# Ensure these are also present
rust_decimal = { version = "1.32", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
# Updated to 0.12 (better Axum 0.7 compatibility) and standardized TLS
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["cors"] }
# tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# tracing = "0.1.44"
